# ktds_P2_user15

./: .gitignore  01.smaple.py  02.AIpoem.py  03.streamlit.py  04.AIPoemWeb.py  05.chat_interface.py  07-1.reg_app.py  4-01.smaple.py  4-02.AIpoem.py  4-04.AIPoemWeb.py  4-05.chat_interface.py  5-01.computervision.py  6-01.computervision.py  6-02.object_detect.py  README.md  github_coplilot.py  main.py  pyproject.toml
